--- a/home.html
+++ b/home.html
@@ -30,6 +30,7 @@
       </a>
     </header>
     <main>
+      <!-- Home Section  -->
       <section>
         <div class="home">
           <div class="home-text">
