feat: Memperbaiki tampilan yang responsive

--- a/home.html
+++ b/home.html
@@ -34,20 +34,18 @@
       <section>
         <div class="home">
           <div class="home-text">
-            <h1>Hi, I'm Adityawangsa</h1>
-            <h2>Frontend Developer</h2>
+            <div class="title-home">
+              <h1>Hi, I'm Adityawangsa</h1>
+              <h2>Frontend Developer</h2>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-              sequi corporis, rem praesentium neque beatae corrupti natus esse
-              voluptates, consequuntur recusandae aut facere. Magnam, incidunt
-              sequi non a adipisci delectus.
+              Seorang penggemar fotografi dengan minat mendalam di bidang
+              teknologi informasi. Menggabungkan kreativitas visual melalui
+              lensa kamera dengan kecintaan saya pada perkembangan teknologi.
             </p>
           </div>
           <div class="home-img">
-            <img
-              src="https://cdn-1.timesmedia.co.id/images/2024/07/14/Tim-Bizword-asal-Polinema.jpg"
-              alt="gambar-profil"
-            />
+            <img src="./MyPhotoProfile.png" alt="gambar-profil" />
           </div>
         </div>
       </section>
