--- a/home.html
+++ b/home.html
@@ -43,6 +43,10 @@
               teknologi informasi. Menggabungkan kreativitas visual melalui
               lensa kamera dengan kecintaan saya pada perkembangan teknologi.
             </p>
+            <div class="btn-home">
+              <a href="#">Hire me</a>
+              <a href="#" class="btn-talk">Let's talk</a>
+            </div>
           </div>
           <div class="home-img">
             <img src="./MyPhotoProfile.png" alt="gambar-profil" />
